--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.13.1",
     "next": "14.0.4",
     "react": "^18.2.0",
