--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.13.1",
